update: Use direct README.md links

--- a/index.html
+++ b/index.html
@@ -93,19 +93,19 @@
 							<div>
 								Install nodecliac via
 								<a
-									href="https://github.com/cgabriel5/nodecliac#install"
+									href="https://github.com/cgabriel5/nodecliac/blob/master/README.md#install"
 									target="_blank"
 									class="link"
 									>yarn</a
 								>,
 								<a
-									href="https://github.com/cgabriel5/nodecliac#install"
+									href="https://github.com/cgabriel5/nodecliac/blob/master/README.md#install"
 									target="_blank"
 									class="link"
 									>npm</a
 								>, or
 								<a
-									href="https://github.com/cgabriel5/nodecliac#install-manual"
+									href="https://github.com/cgabriel5/nodecliac/blob/master/README.md#install-manual"
 									target="_blank"
 									class="link"
 									>manually</a
@@ -189,7 +189,7 @@
 						<div>
 							See
 							<a
-								href="https://github.com/cgabriel5/nodecliac#nodecliac"
+								href="https://github.com/cgabriel5/nodecliac/blob/master/README.md"
 								target="_blank"
 								class="link"
 								>docs</a
