update: Cleanup HTML

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 							href="https://github.com/cgabriel5/nodecliac"
 							target="_blank"
 							class="link"
-							>View On GitHub</a
+							>GitHub</a
 						></span
 					>
 				</div>
@@ -75,12 +75,11 @@
 						useful for non NodeJS applications as well.
 					</div>
 					<div>
-						<span class="bold">2.</span> Currently,
-						<code>Bash</code> and <code>Perl</code> are used for
-						tab-completion. The parser (converts
-						<code>.acmap</code> files to <code>.acdef</code> files),
-						formatter, and other CLI tools are made using
-						<code>NodeJS/JavaScript</code>.
+						<span class="bold">2.</span> <code>Bash</code> and
+						<code>Perl</code> are used in tandem to provide
+						tab-completion. nodecliac's tools (parser, formatter,
+						etc.) are written in<code>JavaScript</code> and
+						therefore require <code>NodeJS</code>.
 					</div>
 				</div>
 			</section>
