fix: Adjust nav item, tag element heights, align text vertically

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
 		<div class="topic-cont">
 			<div class="topic">
 				<div class="tags-cont">
-					<div class="topic-tag">cli-tool</div>
-					<div class="topic-tag">bash-completion</div>
+					<div class="topic-tag"><span>cli-tool</span></div>
+					<div class="topic-tag"><span>bash-completion</span></div>
 				</div>
 				<div class="topic-title">
 					<span class="bold">node</span>-<span class="bold">cli</span
