update: Re-phrase landing overview message

--- a/index.html
+++ b/index.html
@@ -58,21 +58,22 @@
 			<section>
 				<div class="section-title">Overview</div>
 				<p class="section-paragraph">
-					Bash tab-completion is awesome but adding it to CLI apps can
-					be a pain. nodecliac aims to simply this. With nodecliac,
-					the idea is to map the program's commands and flags in an
+					Bash tab-completion is awesome but adding it to CLI programs
+					can be a pain. nodecliac aims to simplify this. With
+					nodecliac, the idea is to map the program's commands and
+					flags in an
 					<code>.acmap</code> file and well,
 					<span class="italic">that's it</span>. nodecliac handles the
-					heavy lifting and your CLI app now has Bash tab-completion.
+					rest to make your CLI program Bash tab-completion ready.
 				</p>
 
 				<div class="note-cont">
 					<span class="bold">Notes:</span>
 					<div>
 						<span class="bold">1.</span> nodecliac was originally
-						made in mind for NodeJs CLI applications which explains
-						the name. However, as development continued it proved
-						useful for non NodeJS applications as well.
+						made in mind for NodeJs CLI programs which explains the
+						name. However, as development continued it proved useful
+						for non NodeJS programs as well.
 					</div>
 					<div>
 						<span class="bold">2.</span> <code>Bash</code> and
@@ -115,7 +116,7 @@
 					<div class="list-item">
 						<div class="list-bullet"><span>2.</span></div>
 						<div>
-							Create the CLI app's
+							Create the CLI program's
 							<code>command.acmap</code> file.
 						</div>
 					</div>
