update: Change landing message wording

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 					<code>.acmap</code> file and well,
 					<span class="italic">that's it</span>. nodecliac handles the
 					rest. <span class="italic">The end result?</span> Your
-					program having Bash tab-completion.
+					program now has Bash tab-completion.
 				</p>
 
 				<div class="note-cont">
