update: Add Nim usage to landing page notes

--- a/index.html
+++ b/index.html
@@ -113,11 +113,11 @@
 						for non NodeJS programs as well.
 					</div>
 					<div>
-						<span class="bold">2.</span> <code>Bash</code> and
-						<code>Perl</code> are used in tandem to provide
-						tab-completion. nodecliac's tools (parser, formatter,
-						etc.) are written in<code>JavaScript</code> and
-						therefore require <code>NodeJS</code>.
+						<span class="bold">2.</span> <code>Bash</code>,
+						<code>Perl</code>, and <code>Nim</code> are used to
+						provide tab-completion. nodecliac's tools (parser,
+						formatter, etc.) are written in<code>JavaScript</code>
+						and therefore require <code>NodeJS</code>.
 					</div>
 				</div>
 			</section>
