update: Modify landing page message, minor style changes

--- a/index.html
+++ b/index.html
@@ -74,18 +74,25 @@
 						<!-- <div class="list-bullet"><span>3.</span></div> -->
 
 						<div>
-							<span class="bold">Tip:</span> Don't forget to
-							reload <code>.bashrc</code> by running
-							<code>$ source ~/.bashrc</code>.
-
-							<div>
-								See complete installation methods/arguments
-								<a
-									href="https://github.com/cgabriel5/nodecliac#install"
-									target="_blank"
-									class="link"
-									>here</a
-								>.
+							<div class="note-cont note-tip">
+								<span class="bold">Tips:</span>
+								<div>
+									<span class="bold">1.</span>
+									After installing reload
+									<code>.bashrc</code> (by running
+									<code>$ source ~/.bashrc</code>) or open a
+									new Terminal to use Bash tab completions.
+								</div>
+								<div>
+									<span class="bold">2.</span>
+									See complete installation methods/arguments
+									<a
+										href="https://github.com/cgabriel5/nodecliac#install"
+										target="_blank"
+										class="link"
+										>here</a
+									>.
+								</div>
 							</div>
 						</div>
 					</div>
@@ -96,12 +103,11 @@
 				<div class="section-title">Overview</div>
 				<p class="section-paragraph">
 					Bash tab-completion is awesome but adding it to CLI programs
-					can be a pain. nodecliac simplifies this. The idea is to map
-					the program's commands and flags in an
+					can be a pain. nodecliac makes it easy. Simply map a
+					program's commands with their flags in an
 					<code>.acmap</code> file and well,
 					<span class="italic">that's it</span>. nodecliac handles the
-					rest. <span class="italic">The end result?</span> Your
-					program now has Bash tab-completion.
+					reset — leaving your program Bash tab-completion ready.
 				</p>
 
 				<div class="note-cont">
