update: Add --stay flag to Sublime Text acmap example

--- a/index.html
+++ b/index.html
@@ -220,6 +220,7 @@
 	--<span class="flag-name">add</span>
 	--<span class="flag-name">wait</span>?
 	--<span class="flag-name">background</span>?
+	--<span class="flag-name">stay</span>?
 	--<span class="flag-name">help</span>?
 	--<span class="flag-name">version</span>?
 ]
