update: Fix landing page typo

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 					commands with their flags in an
 					<code>.acmap</code> file and well,
 					<span class="italic">that's it</span>. nodecliac handles the
-					reset — leaving your program Bash completion ready.
+					rest — leaving your program Bash completion ready.
 				</p>
 
 				<div class="note-cont">
