update: Add more resize breakpoints, wrap notes in a footer tag

--- a/index.html
+++ b/index.html
@@ -140,60 +140,63 @@
 					>
 				</div>
 
-				<div class="note-cont note-tip">
-					<span class="bold">Notes:</span>
-					<div>
-						<span class="bold">1.</span>
-						<span class="italic">The name?</span> Though originally
-						made for Node.js programs, as development continued it
-						proved useful for non Node.js programs as well.
+				<footer class="footer">
+					<div class="note-cont note-tip">
+						<span class="bold">Notes:</span>
+						<div>
+							<span class="bold">1.</span>
+							<span class="italic">The name?</span> Though
+							originally made for Node.js programs, as development
+							continued it proved useful for non Node.js programs
+							as well.
+						</div>
+						<div>
+							<span class="bold">2.</span>
+							<code>
+								<a
+									class="anchor"
+									href="https://www.gnu.org/software/bash/"
+									target="_blank"
+									>Bash</a
+								></code
+							>,
+							<code
+								><a
+									class="anchor"
+									href="https://www.perl.org/"
+									target="_blank"
+									>Perl</a
+								></code
+							>, and
+							<code
+								><a
+									class="anchor"
+									href="https://nim-lang.org/"
+									target="_blank"
+									>Nim</a
+								></code
+							>
+							provide completion logic. nodecliac's tools (parser,
+							formatter) are written in<code
+								><a
+									class="anchor"
+									href="https://developer.mozilla.org/en-US/docs/Web/JavaScript"
+									target="_blank"
+									>JavaScript</a
+								></code
+							>
+							which require
+							<code
+								><a
+									class="anchor"
+									href="https://nodejs.org/en/"
+									target="_blank"
+									>Node.js</a
+								></code
+							>.
+						</div>
 					</div>
-					<div>
-						<span class="bold">2.</span>
-						<code>
-							<a
-								class="anchor"
-								href="https://www.gnu.org/software/bash/"
-								target="_blank"
-								>Bash</a
-							></code
-						>,
-						<code
-							><a
-								class="anchor"
-								href="https://www.perl.org/"
-								target="_blank"
-								>Perl</a
-							></code
-						>, and
-						<code
-							><a
-								class="anchor"
-								href="https://nim-lang.org/"
-								target="_blank"
-								>Nim</a
-							></code
-						>
-						provide completion logic. nodecliac's tools (parser,
-						formatter) are written in<code
-							><a
-								class="anchor"
-								href="https://developer.mozilla.org/en-US/docs/Web/JavaScript"
-								target="_blank"
-								>JavaScript</a
-							></code
-						>
-						which require
-						<code
-							><a
-								class="anchor"
-								href="https://nodejs.org/en/"
-								target="_blank"
-								>Node.js</a
-							></code
-						>.
-					</div>
-				</div>
+				</footer>
 			</section>
 		</main>
 	</body>
