update: Mirror master's README.md messages

--- a/index.html
+++ b/index.html
@@ -101,17 +101,18 @@
 							>bash-completion</a
 						></code
 					>
-					for CLI programs is awesome. It enhances the user experience
-					by completing file names, commands, flags, etc. What
-					<span class="italic">isn't</span> is the time and effort
-					required to add it.
+					is awesome. It enhances the user experience by completing
+					paths, file names, commands, flags, etc. However, the time
+					and effort required to support it
+					<span class="italic">isn't</span>.
 				</p>
 
 				<br />
 
 				<p class="section-paragraph">
-					<span class="italic">nodecliac</span> makes supporting
-					bash-completion easy. Simply create the program's
+					<span class="italic">nodecliac</span> provides a simple
+					approach to bash-completion. How? By mapping a program's
+					commands with their flags in an
 					<code
 						><a
 							class="anchor"
@@ -120,18 +121,18 @@
 							>.acmap</a
 						></code
 					>
-					file (a file containing the program's command to flag
-					mappings) and nodecliac handles the rest. Leaving the
-					program Bash completion ready.
+					file. That's is. Let nodecliac handle the rest.
 				</p>
 
 				<br />
 
 				<p class="section-paragraph">
-					The goal behind this project is two-fold: minimize efforts
-					needed when adding bash-completion and build a collection of
-					community made completion packages for all to enjoy. This
-					way, more programs come baked with bash-completion support.
+					The goals behind this project are a few:
+					<code>1</code> minimize the effort needed to add
+					bash-completion so more programs support it,
+					<code>2</code> provide a uniform bash-completion experience,
+					and <code>3</code> to ultimately build a collection of
+					community made completion packages for all to enjoy.
 				</p>
 
 				<div class="action-button">
